<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.ambraproject</groupId>
  <artifactId>ambra-admin</artifactId>
  <version>1.4-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>Ambra Administration</name>

  <description>Administrative web application for Ambra.</description>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
      <comments>Copyright (c) 2006-2009 by Topaz, Inc.</comments>
      <distribution>repo</distribution>
    </license>
  </licenses>


  <properties>
    <maven.compiler.source>1.6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>
    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    <spring.version>2.5.6.SEC01</spring.version>
    <camel.version>2.6.0</camel.version>
    <activemq.version>5.2.0</activemq.version>
    <easymock.version>2.5.2</easymock.version>
    <ambra.version>2.3.1-SNAPSHOT</ambra.version>
    <conf-helper.version>2.2.1</conf-helper.version>
  </properties>

  <repositories>
    <repository>
      <id>ambra</id>
      <name>Maven 2 Release Repository for Ambra</name>
      <url>http://maven.ambraproject.org/maven2/release/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>ambra.snapshot</id>
      <name>Maven 2 Snapshot Repository for Ambra</name>
      <url>http://maven.ambraproject.org/maven2/snapshot/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>central</id>
      <name>Maven Repository Switchboard</name>
      <layout>default</layout>
      <url>http://repo1.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <scm>
    <developerConnection>scm:svn:http://ambraproject.org/svn/ambra/ambra-admin/</developerConnection>
    <connection>scm:svn:http://ambraproject.org/svn/ambra/ambra-admin/</connection>
    <url>http://www.ambraproject.org/trac/browser/ambra/ambra-admin/</url>
  </scm>

  <distributionManagement>
    <repository>
      <id>ambra</id>
      <url>scp://maven.ambraproject.org/home/maven2/repository/release</url>
    </repository>
    <snapshotRepository>
      <id>ambra.snapshot</id>
      <url>scp://maven.ambraproject.org/home/maven2/repository/snapshot</url>
      <uniqueVersion>false</uniqueVersion>
    </snapshotRepository>
    <site>
      <id>ambra.javadoc</id>
      <!-- This is where the site-deploy phase will put the documentation -->
      <url>scp://maven.ambraproject.org/home/maven2/javadoc</url>
    </site>
  </distributionManagement>

  <dependencies>

    <!--The warpath dependency allows us to build with ambra classes and
          includes all the transitive dependencies from ambra-->
    <dependency>
      <groupId>org.ambraproject</groupId>
      <artifactId>ambra-webapp</artifactId>
      <version>${ambra.version}</version>
      <type>warpath</type>
      <exclusions>
        <!--These are some easy wins for reducing the size of the admin war, we don't need these libraries in admin-->
        <exclusion>
          <groupId>org.tuckey</groupId>
          <artifactId>urlrewritefilter</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.solr</groupId>
          <artifactId>solr-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.mortbay.jetty</groupId>
          <artifactId>jetty-util</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.ambraproject</groupId>
          <artifactId>ambra-js</artifactId>
        </exclusion>
        <!--This is a hack, but for some reason warpath is including version 1.0 of conf-helper,
                  even though ambra is using the correct version-->
        <exclusion>
          <groupId>org.ambraproject</groupId>
          <artifactId>conf-helper</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>net.sf.saxon</groupId>
      <artifactId>saxon</artifactId>
      <version>9.3</version>
    </dependency>
    <dependency>
      <groupId>org.ambraproject</groupId>
      <artifactId>conf-helper</artifactId>
      <version>${conf-helper.version}</version>
    </dependency>

    <!--the war dependency is necessary to overlay classes, ftls, etc. when building the admin war-->
    <dependency>
      <groupId>org.ambraproject</groupId>
      <artifactId>ambra-webapp</artifactId>
      <version>${ambra.version}</version>
      <type>war</type>
      <scope>runtime</scope>
    </dependency>

    <!--This allows us to reuse test code from ambra-->
    <dependency>
      <groupId>org.ambraproject</groupId>
      <artifactId>ambra-webapp</artifactId>
      <version>${ambra.version}</version>
      <!--In a future version of maven, this classifier may need to change to test-jar-->
      <classifier>tests</classifier>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.4</version>
      <scope>provided</scope>
    </dependency>

    <!--Dependencies just for admin app-->

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-jms</artifactId>
      <version>${spring.version}</version>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <!--camel stuff-->
    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-core</artifactId>
      <version>${camel.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-spring</artifactId>
      <version>${camel.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-mail</artifactId>
      <version>${camel.version}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-jms</artifactId>
      <version>${camel.version}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.activemq</groupId>
      <artifactId>activemq-camel</artifactId>
      <version>${activemq.version}</version>
      <scope>runtime</scope>
    </dependency>

    <!--Transitive test dependencies don't get handed down from ambra-->
    <dependency>
      <groupId>xmlunit</groupId>
      <artifactId>xmlunit</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>${easymock.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>5.7</version>
      <classifier>jdk15</classifier>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>commons-dbcp</groupId>
      <artifactId>commons-dbcp</artifactId>
      <version>1.4</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>1.8.0.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-jetty</artifactId>
      <version>${camel.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <finalName>ambra-admin</finalName>
    <plugins>
      <!--warpath plugin allows us to use warpath dependencies to get transitive dependencies from the war-->
      <plugin>
        <groupId>org.appfuse</groupId>
        <artifactId>maven-warpath-plugin</artifactId>
        <version>2.0</version>
        <extensions>true</extensions>
        <executions>
          <execution>
            <goals>
              <goal>add-classes</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.1.1</version>
        <configuration>
          <overlays>
            <overlay>
              <groupId>org.ambraproject</groupId>
              <artifactId>ambra-webapp</artifactId>
              <!--Specify what to include from ambra to keep the war small-->
              <includes>
                <!--classes and hibernate mappings-->
                <include>WEB-INF/classes/**/*.class</include>
                <include>WEB-INF/hibernateMappings/*</include>

                <include>WEB-INF/profaneWords.xml</include>
                <include>WEB-INF/countryList.xml</include>
                <!--templates for the struts 'theme'-->
                <include>template/**</include>
              </includes>
              <excludes>
                <!--The warpath plugin will populate WEB-INF/lib-->
                <exclude>WEB-INF/lib/*</exclude>
              </excludes>
            </overlay>
          </overlays>
        </configuration>
      </plugin>
      <!--specify compiler version and encoding-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <encoding>${maven.compiler.encoding}</encoding>
        </configuration>
      </plugin>
      <!--settings for running tests-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.8</version>
        <configuration>
          <argLine>-Xms1024m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
          <parallel>false</parallel>
          <systemProperties>
            <property>
              <name>log4j.configuration</name>
              <value>file:${project.basedir}/target/test-classes/log4j.properties</value>
            </property>
          </systemProperties>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.0-beta-7</version>
        <configuration>
          <goals>deploy</goals>
          <!-- disable site deploy -->
          <useReleaseProfile>false</useReleaseProfile>
          <!-- no javadoc and source jars -->
          <tagBase>http://ambraproject.org/svn/ambra/ambra-admin/tags</tagBase>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <preparationGoals>clean install</preparationGoals>
          <arguments>-Ppackages,distribution,release</arguments>
        </configuration>
      </plugin>
    </plugins>
    <!--Turn on filtering of test resource to set up directories -->
    <testResources>
      <!-- Do not "filter" binary files when copying, since text substitutions will break binary files -->
      <testResource>
        <filtering>true</filtering>
        <directory>${project.basedir}/src/test/resources</directory>
        <excludes>
          <exclude>*.zip</exclude>
          <exclude>**/*.zip</exclude>
        </excludes>
      </testResource>

      <!-- Copy over binary files without "filtering", since text substitutions will break binary files -->
      <testResource>
        <directory>${project.basedir}/src/test/resources</directory>
        <includes>
          <include>*.zip</include>
          <include>**/*.zip</include>
        </includes>
      </testResource>

    </testResources>

    <defaultGoal>install</defaultGoal>
  </build>
</project>
